--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
             <div class="proyect__proyects">
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe> -->
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
@@ -154,7 +154,7 @@
                 </article>
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe> -->
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
@@ -190,17 +190,24 @@
             <div class="result__content">
                 <article class="result__data">
                     <h4 class="result__title">Prototipo A</h4>
-                    <div class="result__data"></div>
+                    <div class="result__res result__res--A"></div>
                 </article>
                 <article class="result__data">
                     <h4 class="result__title">Prototipo B</h4>
-                    <div class="result__data"></div>
+                    <div class="result__res result__res--B"></div>
                 </article>
             </div>
         </section>
         
         <!-- Separation Line -->
         <hr class="layout__line">
+
+        <footer>
+            Footer...
+        </footer>
+        <div class="progress-circle" data-percentage="75">
+            <span class="percentage">75%</span>
+        </div>
     </div>
     <!-- JS -->
     <script src="./assets/js/menuChange.js" ></script>
