--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
                     <div class="proyect__content">
                         <p class="proyect__text">
                             El prototipo B elaborado en figma para el caso de estudio de la empresa Fabrica de talento.
-                            <br>Este proyecto esta direccionado a class="menu__link" desasrrollarse en una aplicacion movil, para uso exclusvo de esta plataforma
+                            <br>Este proyecto esta direccionado a desasrrollarse en una aplicacion movil, para uso exclusvo de esta plataforma
                             ya que se penso en la facil accesibilidad para los usuarios, todo pensado para las pantallas mas pequeñas y con componentes minimalistas.
                         </p>
                         <h3 class="proyect__title">Prototipo B</h3>
