move index to root

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- css -->
-    <link rel="stylesheet" href="./assets/css/resets.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./src/assets/css/resets.css">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
 
     <!-- Fonts -->
     <link href="https://fonts.cdnfonts.com/css/dragonlord-personal-use-only" rel="stylesheet">
@@ -53,12 +53,12 @@
                     <ul class="shapes__list">
                         <li class="shapes__item shapes__item--ellipse">
                             <div class="shapes__container">
-                                <img class="shapes__img" src="./assets/img/Ellipse.png">
+                                <img class="shapes__img" src="./src/assets/img/Ellipse.png">
                             </div>
                         </li>
                         <li class="shapes__item shapes__item--base">
                             <div class="shapes__container shapes__container--base">
-                                <img class="shapes__img" src="./assets/img/Base.png">
+                                <img class="shapes__img" src="./src/assets/img/Base.png">
                             </div>
                         </li>
                     </ul>
@@ -79,7 +79,7 @@
                 <article class="cards__card-container">
                     <div class="team__card">
                         <div class="card__container-img">
-                            <img class="card__img" src="./assets/img/userImg-1.png" alt="">
+                            <img class="card__img" src="./src/assets/img/userImg-1.png" alt="">
                         </div>
                         <div class="card__content">
                             <p class="card__text">
@@ -92,7 +92,7 @@
                 <article class="cards__card-container">
                     <div class="team__card">
                         <div class="card__container-img">
-                            <img class="card__img" src="./assets/img/userImg-2.png" alt="">
+                            <img class="card__img" src="./src/assets/img/userImg-2.png" alt="">
                         </div>
                         <div class="card__content">
                             <p class="card__text">
@@ -105,7 +105,7 @@
                 <article class="cards__card-container">
                     <div class="team__card">
                         <div class="card__container-img">
-                            <img class="card__img" src="./assets/img/userImg-3.png" alt="">
+                            <img class="card__img" src="./src/assets/img/userImg-3.png" alt="">
                         </div>
                         <div class="card__content">
                             <p class="card__text">
@@ -118,7 +118,7 @@
                 <article class="cards__card-container">
                     <div class="team__card">
                         <div class="card__container-img">
-                            <img class="card__img" src="./assets/img/userImg-4.png" alt="">
+                            <img class="card__img" src="./src/assets/img/userImg-4.png" alt="">
                         </div>
                         <div class="card__content">
                             <p class="card__text">
@@ -210,6 +210,6 @@
         </div>
     </div>
     <!-- JS -->
-    <script src="./assets/js/menuChange.js" ></script>
+    <script src="./src/assets/js/menuChange.js" ></script>
 </body>
 </html>
