add section of footer and design

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <!-- public css -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +13,9 @@
     <!-- Fonts -->
     <link href="https://fonts.cdnfonts.com/css/dragonlord-personal-use-only" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/inknut-antiqua" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./src/assets/icon/logo.png">
 
     <!-- config page -->
     <meta charset="UTF-8">
@@ -38,6 +40,9 @@
                     </li>
                     <li class="menu__option">
                         <a id="goResult" class="menu__link" href="#result">Resultados</a>
+                    </li>
+                    <li class="menu__option">
+                        <a id="goDesign" class="menu__link" href="#design">Diseño</a>
                     </li>
                 </ul>
             </nav>
@@ -202,14 +207,161 @@
         <!-- Separation Line -->
         <hr class="layout__line">
 
-        <footer>
-            Footer...
-        </footer>
-        <div class="progress-circle" data-percentage="75">
-            <span class="percentage">75%</span>
-        </div>
+        <!-- design process -->
+        <section id="design" class="layout__desing">
+            <header class="desing__header">
+                <h2 class="header__title">Proceso de diseño</h2>
+                <hr class="header__line">
+            </header>
+            <div class="resume__timelines">
+                <article class="timelnes__timeline">
+                    <header class="timeline__header">
+                        <h4 class="timeline__year">
+                            2024
+                        </h4>
+                        <span class="timeline__company">
+                            Responsable o algo...
+                        </span>
+                    </header>
+
+                    <div class="timeline__divider"></div>
+
+                    <div class="timeline__description">
+                        <h3 class="timeline__title">
+                            Proceso de diseño
+                        </h3>
+                        <p class="timelnes__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                        </p>
+                    </div>
+                </article>
+
+                <article class="timelnes__timeline">
+                    <header class="timeline__header">
+                        <h4 class="timeline__year">
+                            2024
+                        </h4>
+                        <span class="timeline__company">
+                            Responsable o algo...
+                        </span>
+                    </header>
+
+                    <div class="timeline__divider"></div>
+
+                    <div class="timeline__description">
+                        <h3 class="timeline__title">
+                            Proceso de diseño
+                        </h3>
+                        <p class="timelnes__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                        </p>
+                    </div>
+                </article>
+
+                <article class="timelnes__timeline">
+                    <header class="timeline__header">
+                        <h4 class="timeline__year">
+                            2024
+                        </h4>
+                        <span class="timeline__company">
+                            Responsable o algo...
+                        </span>
+                    </header>
+
+                    <div class="timeline__divider"></div>
+
+                    <div class="timeline__description">
+                        <h3 class="timeline__title">
+                            Proceso de diseño
+                        </h3>
+                        <p class="timelnes__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                        </p>
+                    </div>
+                </article>
+
+                <article class="timelnes__timeline">
+                    <header class="timeline__header">
+                        <h4 class="timeline__year">
+                            2024
+                        </h4>
+                        <span class="timeline__company">
+                            Responsable o algo...
+                        </span>
+                    </header>
+
+                    <div class="timeline__divider"></div>
+
+                    <div class="timeline__description">
+                        <h3 class="timeline__title">
+                            Proceso de diseño
+                        </h3>
+                        <p class="timelnes__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                        </p>
+                    </div>
+                </article>
+
+                <article class="timelnes__timeline">
+                    <header class="timeline__header">
+                        <h4 class="timeline__year">
+                            2024
+                        </h4>
+                        <span class="timeline__company">
+                            Responsable o algo...
+                        </span>
+                    </header>
+
+                    <div class="timeline__divider"></div>
+
+                    <div class="timeline__description">
+                        <h3 class="timeline__title">
+                            Proceso de diseño
+                        </h3>
+                        <p class="timelnes__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
     </div>
+    <!-- Footer -->
+    <footer id="footer" class="footer">
+        <header class="footer__header">
+            <div class="footer__fleft">
+                <img class="footer__logo" src="./src/assets/icon/logo.png" alt="Logo Kelovest">
+            </div>
+            <div class="footer__middle--line"></div>
+            <div class="footer__fright">
+                <div class="fright__list">
+                    <a class="fright__link" href="#">
+                        <img class="fright__img" src="./src/assets/svg/facebook.svg" alt="facebook" srcset="">
+                    </a>
+                    <a class="fright__link" href="https://github.com/Kent-Probe/portafoliodcu">
+                        <img class="fright__img" src="./src/assets/svg/github.svg" alt="git hub" srcset="">
+                    </a>
+                    <a class="fright__link" href="https://www.figma.com/proto/DeZTZ4S4tZ6lEKAaUVhukk/portafoliodcu?node-id=1-2&t=ymwwO1I7ZbCme42S-1&scaling=scale-down&page-id=0%3A1">
+                        <img class="fright__img" src="./src/assets/svg/figma.svg" alt="figma" srcset="">
+                    </a>
+                    <a class="fright__link" href="">
+                        <img class="fright__img" src="./src/assets/svg/youtube.svg" alt="youtube" srcset="">
+                    </a>
+                </div>
+            </div>                
+        </header>
+        <div class="footer__foot">
+            <article class="footer__content">
+                <p class="footer__left">
+                    Proyecto elaborado para el de curso de diseño centrado en el usuario de la Universidad Nacional Abierta y a Distancia
+                </p>
+                <p class="footer__rigth">
+                    Copyright &copy; 2024 Kelovest 
+                </p>
+            </article>
+        </div>
+    </footer>
     <!-- JS -->
-    <script src="./src/assets/js/menuChange.js" ></script>
+    <script src="./src/js/menuChange.js" ></script>
 </body>
 </html>
