add scroll style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./src/assets/css/resets.css">
     <link rel="stylesheet" href="./src/assets/css/style.css">
+    <link rel="stylesheet" href="./src/assets/css/scroll.css">
 
     <!-- Fonts -->
     <link href="https://fonts.cdnfonts.com/css/dragonlord-personal-use-only" rel="stylesheet">
