add responsive file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./src/assets/css/resets.css">
     <link rel="stylesheet" href="./src/assets/css/style.css">
     <link rel="stylesheet" href="./src/assets/css/scroll.css">
+    <link rel="stylesheet" href="./src/assets/css/responsive.css">
 
     <!-- Fonts -->
     <link href="https://fonts.cdnfonts.com/css/dragonlord-personal-use-only" rel="stylesheet">
@@ -148,11 +149,11 @@
             <div class="proyect__proyects">
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe>
+                        <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
-                            El prototipo a class="menu__link" elaborado en figma para el caso de estudio de la empresa Fabrica de talento.
+                            El prototipo a elaborado en figma para el caso de estudio de la empresa Fabrica de talento.
                             <br>Este proyecto esta elaborado pensando como aplicacion web, teniendo las diversas ventajas que ofrecen las aplicaciones web, diseñada con componentes que faciliten su interpretacion siguiendo los estandares del IHC.
                         </p>
                         <h3 class="proyect__title">Prototipo A</h3>
@@ -160,7 +161,7 @@
                 </article>
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe>
+                        <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
@@ -212,7 +213,7 @@
         <section id="design" class="layout__desing">
             <header class="desing__header">
                 <h2 class="header__title">Proceso de diseño</h2>
-                <hr class="header__line">
+                <hr class="header__line header__line--design">
             </header>
             <div class="resume__timelines">
                 <article class="timelnes__timeline">
