iframe not comment

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="proyect__proyects">
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <!-- <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe> -->
+                        <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
@@ -175,7 +175,7 @@
                 </article>
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <!-- <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe> -->
+                        <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
