--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
                         </div>
                         <div class="card__content">
                             <p class="card__text">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error quae adipisci ut voluptatem natus aliquam dicta hic. Corporis veniam illum repellendus iusto nam labore numquam, libero itaque velit. Unde, rem.
+                                Soy Kevin Santiago Hernández Escobar, estudiante de ingenieria de sistemas
+                                de la UNAD, con conocimientos de programacion y diseño, me eh desempeñado como programador
+                                y diseñador principal en esta actividad.
                             </p>
                         </div>
                     </div>
@@ -117,7 +119,9 @@
                         </div>
                         <div class="card__content">
                             <p class="card__text">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error quae adipisci ut voluptatem natus aliquam dicta hic. Corporis veniam illum repellendus iusto nam labore numquam, libero itaque velit. Unde, rem.
+                                Soy Lorena Stephanie Montero Rodríguez. Soy estudiante de Ingeniería de Sistemas y 
+                                también tengo una carrera en Citohistología. Me interesa la tecnología y las ciencias 
+                                de la salud, me desempeñe como investigadora principal.
                             </p>
                         </div>
                     </div>
@@ -130,7 +134,9 @@
                         </div>
                         <div class="card__content">
                             <p class="card__text">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error quae adipisci ut voluptatem natus aliquam dicta hic. Corporis veniam illum repellendus iusto nam labore numquam, libero itaque velit. Unde, rem.
+                                Soy Leonardo Poveda, estudiante de Ingeniería de Sistemas en la UNAD, cursando el séptimo 
+                                semestre. Tengo 22 años y soy un apasionado de los miradores y las montañas; 
+                                me desempeñe como diseñador de UI y UX.
                             </p>
                         </div>
                     </div>
@@ -143,7 +149,9 @@
                         </div>
                         <div class="card__content">
                             <p class="card__text">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error quae adipisci ut voluptatem natus aliquam dicta hic. Corporis veniam illum repellendus iusto nam labore numquam, libero itaque velit. Unde, rem.
+                                Soy Jahir Antonio Carvajal Bernal, estudiante De Ingeniería de Sistemas, con 
+                                más de 3 años de experiencia en Desarrollo de Software backend, eh desempeñado el 
+                                papel de gestionador de proyecto.
                             </p>
                         </div>
                     </div>
@@ -163,7 +171,7 @@
             <div class="proyect__proyects">
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe>
+                        <iframe class="proyect__img" loading="lazy" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoAVhpbl7JTfcR61EA7Dtgk%2FFabrica-de-talento---DCU%3Fnode-id%3D37-55%26t%3DEjSfGGCwLVkWct8v-1%26scaling%3Dscale-down%26page-id%3D1%253A3%26starting-point-node-id%3D37%253A55" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
@@ -175,7 +183,7 @@
                 </article>
                 <article class="proyects__proyect">
                     <div class="proyect__container-img">
-                        <iframe class="proyect__img" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe>
+                        <iframe class="proyect__img" loading="lazy" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9iQMb9d1wrgZAMCcdtw4dI%2FFabrica-de-talento---DCU-2%3Fnode-id%3D60-149%26t%3DTHGhUachIf71rjEC-1%26scaling%3Dscale-down%26page-id%3D2%253A3%26starting-point-node-id%3D60%253A128" allowfullscreen></iframe>
                     </div>
                     <div class="proyect__content">
                         <p class="proyect__text">
@@ -233,10 +241,10 @@
                 <article class="timelnes__timeline">
                     <header class="timeline__header">
                         <h4 class="timeline__year">
-                            2024
+                            FASE 1
                         </h4>
                         <span class="timeline__company">
-                            Responsable o algo...
+                            Kelovest - encargado: Jahir Carvajal
                         </span>
                     </header>
 
@@ -244,10 +252,10 @@
 
                     <div class="timeline__description">
                         <h3 class="timeline__title">
-                            Proceso de diseño
+                            Análisis de competidores
                         </h3>
                         <p class="timelnes__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                            Se analizo 5 competidores, LinkedIn, Indeed, Glassdoor, Monster, CareerBuilder, analizando elementos como su propósito, ano de fundación, las fuentes de ingreso, ventaja competitiva, debilidades y fortalezas, la navegación de sus páginas, el contenido, las funcionalidades específicas, sus características y diferencias.
                         </p>
                     </div>
                 </article>
@@ -255,10 +263,10 @@
                 <article class="timelnes__timeline">
                     <header class="timeline__header">
                         <h4 class="timeline__year">
-                            2024
+                            FASE 1
                         </h4>
                         <span class="timeline__company">
-                            Responsable o algo...
+                            Kelovest - encargado: Leonardo Poveda y Kevin Hernández.
                         </span>
                     </header>
 
@@ -266,10 +274,10 @@
 
                     <div class="timeline__description">
                         <h3 class="timeline__title">
-                            Proceso de diseño
+                            Análisis de tendencias y referentes
                         </h3>
                         <p class="timelnes__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                            Se analizo aproximadamente 30 tendencias del mercado de aplicaciones de búsqueda de empleo teniendo en cuenta el Design Thinking Toolbox, así se entiendo a cuál dirección va el mercado, para después analizar 10 referentes.  
                         </p>
                     </div>
                 </article>
@@ -277,10 +285,10 @@
                 <article class="timelnes__timeline">
                     <header class="timeline__header">
                         <h4 class="timeline__year">
-                            2024
+                            FASE 2 
                         </h4>
                         <span class="timeline__company">
-                            Responsable o algo...
+                            Kelovest - encargado: Jahir Carvajal y Leonardo Poveda
                         </span>
                     </header>
 
@@ -288,10 +296,10 @@
 
                     <div class="timeline__description">
                         <h3 class="timeline__title">
-                            Proceso de diseño
+                            Arquetipo de persona y Moodboard
                         </h3>
                         <p class="timelnes__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                            Se desarrollo dos tipos de arquetipo simbólicos de los posibles usuarios de la aplicación propuestas, para después elaborar un Moodboard para los diseños de la aplicación.
                         </p>
                     </div>
                 </article>
@@ -299,10 +307,10 @@
                 <article class="timelnes__timeline">
                     <header class="timeline__header">
                         <h4 class="timeline__year">
-                            2024
+                            FASE 2
                         </h4>
                         <span class="timeline__company">
-                            Responsable o algo...
+                            Kelovest - encargado: Kevin Hernández y Lorena Montero
                         </span>
                     </header>
 
@@ -310,10 +318,10 @@
 
                     <div class="timeline__description">
                         <h3 class="timeline__title">
-                            Proceso de diseño
+                            Brainsotming, metodo de priorizacion, Cardsorting y mapa de sitio 
                         </h3>
                         <p class="timelnes__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                            Se Desarrollo una sesión de Brainstorming donde se propuso mas de 15 ideas para que usando el método de priorización para analizar usando el cuadro de Mando de Viabilidad, Deseabilidad y Factibilidad para buscar filtrar las ideas mas viables, después usando el método de Cardsorting se pidió a usuarios que  ordenaran las ideas siguiendo una clasificación.
                         </p>
                     </div>
                 </article>
@@ -321,10 +329,10 @@
                 <article class="timelnes__timeline">
                     <header class="timeline__header">
                         <h4 class="timeline__year">
-                            2024
+                            FASE 3
                         </h4>
                         <span class="timeline__company">
-                            Responsable o algo...
+                            Kelovest - encargado: todos
                         </span>
                     </header>
 
@@ -332,13 +340,14 @@
 
                     <div class="timeline__description">
                         <h3 class="timeline__title">
-                            Proceso de diseño
+                            Diseño de sketchs y prototipos
                         </h3>
                         <p class="timelnes__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio iusto exercitationem magnam sint reprehenderit incidunt illum, vero odit soluta aperiam enim eius nam qui unde adipisci blanditiis? Soluta, ipsum ipsam!
+                            Cada miembro diseño una propuesta en sketch para el diseño de la aplicación, después se escogió dos diseños, el diseño de Kevin Hernández y Leonardo Poveda para después elaborar el prototipo pertinente.
                         </p>
                     </div>
                 </article>
+
             </div>
         </section>
     </div>
